--- a/DevSamples/wwwroot/index.html
+++ b/DevSamples/wwwroot/index.html
@@ -7,6 +7,8 @@
     <title>DevSamples</title>
     <base href="/" />
     <link href="DevSamples.styles.css" rel="stylesheet" />
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
+    <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
 
 <body>
