リファクタリング第一弾 ・非同期化 ・名前空間とフォルダを整理 ・ダークモード対応 ・nugetパッケージの更新

--- a/MyWorkDesktop/wwwroot/index.html
+++ b/MyWorkDesktop/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link href="MyWorkDesktop.styles.css" rel="stylesheet" />
     <link href="app.css" rel="stylesheet" />
+    <link href="_content/MyWorkDashboard.Shared/mywork-color.css" rel="stylesheet" />
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
