--- a/MyWorkDashboard/Client/wwwroot/index.html
+++ b/MyWorkDashboard/Client/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link href="_content/MyWorkDashboard.Shared/mywork-color.css" rel="stylesheet" />
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     <script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 </head>
